gcp/network/vpc/default-routes.json
[
  {
    "creationTimestamp": "2022-12-21T00:29:00.677-08:00",
    "description": "Default local route to the subnetwork 10.154.0.0/20.",
    "destRange": "10.154.0.0/20",
    "id": "4633529628266298659",
    "kind": "compute#route",
    "name": "default-route-120b0e8e1a1e6600",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-120b0e8e1a1e6600"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:04.582-08:00",
    "description": "Default local route to the subnetwork 10.160.0.0/20.",
    "destRange": "10.160.0.0/20",
    "id": "3595254304166870335",
    "kind": "compute#route",
    "name": "default-route-185361fb8189dc54",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-185361fb8189dc54"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:01.347-08:00",
    "description": "Default local route to the subnetwork 10.132.0.0/20.",
    "destRange": "10.132.0.0/20",
    "id": "1029110996638072098",
    "kind": "compute#route",
    "name": "default-route-1920fc2005167826",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-1920fc2005167826"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:02.094-08:00",
    "description": "Default local route to the subnetwork 10.194.0.0/20.",
    "destRange": "10.194.0.0/20",
    "id": "3508552954708720929",
    "kind": "compute#route",
    "name": "default-route-263f56c558e23588",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-263f56c558e23588"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:00.130-08:00",
    "description": "Default local route to the subnetwork 10.202.0.0/20.",
    "destRange": "10.202.0.0/20",
    "id": "1553918221676936483",
    "kind": "compute#route",
    "name": "default-route-2ac9262d4c41487b",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-2ac9262d4c41487b"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:03.198-08:00",
    "description": "Default local route to the subnetwork 10.140.0.0/20.",
    "destRange": "10.140.0.0/20",
    "id": "7394794816175832352",
    "kind": "compute#route",
    "name": "default-route-3589d5e6cf6657b9",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-3589d5e6cf6657b9"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:00.660-08:00",
    "description": "Default local route to the subnetwork 10.138.0.0/20.",
    "destRange": "10.138.0.0/20",
    "id": "7040782841177668899",
    "kind": "compute#route",
    "name": "default-route-3999302cbd084b50",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-3999302cbd084b50"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:01.022-08:00",
    "description": "Default local route to the subnetwork 10.164.0.0/20.",
    "destRange": "10.164.0.0/20",
    "id": "9169454236068445474",
    "kind": "compute#route",
    "name": "default-route-468313b5bf1066c2",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-468313b5bf1066c2"
  },
  {
    "creationTimestamp": "2022-12-21T00:28:59.473-08:00",
    "description": "Default local route to the subnetwork 10.150.0.0/20.",
    "destRange": "10.150.0.0/20",
    "id": "4418444907397479716",
    "kind": "compute#route",
    "name": "default-route-561bda1e08a32613",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-561bda1e08a32613"
  },
  {
    "creationTimestamp": "2022-12-21T00:28:59.580-08:00",
    "description": "Default local route to the subnetwork 10.128.0.0/20.",
    "destRange": "10.128.0.0/20",
    "id": "2900143744576617764",
    "kind": "compute#route",
    "name": "default-route-632dca7cafdb3528",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-632dca7cafdb3528"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:02.165-08:00",
    "description": "Default local route to the subnetwork 10.186.0.0/20.",
    "destRange": "10.186.0.0/20",
    "id": "8417631790135475489",
    "kind": "compute#route",
    "name": "default-route-7897f5199529c84b",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-7897f5199529c84b"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:01.010-08:00",
    "description": "Default local route to the subnetwork 10.182.0.0/20.",
    "destRange": "10.182.0.0/20",
    "id": "5331138742131326243",
    "kind": "compute#route",
    "name": "default-route-817fc4d84c6484bc",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-817fc4d84c6484bc"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:00.788-08:00",
    "description": "Default local route to the subnetwork 10.146.0.0/20.",
    "destRange": "10.146.0.0/20",
    "id": "3862315349157313827",
    "kind": "compute#route",
    "name": "default-route-85e8c45f9ba3ad71",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-85e8c45f9ba3ad71"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:00.153-08:00",
    "description": "Default local route to the subnetwork 10.180.0.0/20.",
    "destRange": "10.180.0.0/20",
    "id": "1448495019581209891",
    "kind": "compute#route",
    "name": "default-route-8a1b6b72c04e1c19",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-8a1b6b72c04e1c19"
  },
  {
    "creationTimestamp": "2022-12-21T00:28:53.554-08:00",
    "description": "Default route to the Internet.",
    "destRange": "0.0.0.0/0",
    "id": "7030914969131515178",
    "kind": "compute#route",
    "name": "default-route-a9424e017df6cc72",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopGateway": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/gateways/default-internet-gateway",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-a9424e017df6cc72"
  },
  {
    "creationTimestamp": "2022-12-21T00:28:59.039-08:00",
    "description": "Default local route to the subnetwork 10.142.0.0/20.",
    "destRange": "10.142.0.0/20",
    "id": "5507388042292198692",
    "kind": "compute#route",
    "name": "default-route-b9ecc55c1f8a18e0",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-b9ecc55c1f8a18e0"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:06.287-08:00",
    "description": "Default local route to the subnetwork 10.148.0.0/20.",
    "destRange": "10.148.0.0/20",
    "id": "7253783338971790653",
    "kind": "compute#route",
    "name": "default-route-c0920f75992bc86b",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-c0920f75992bc86b"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:02.553-08:00",
    "description": "Default local route to the subnetwork 10.152.0.0/20.",
    "destRange": "10.152.0.0/20",
    "id": "5886596515946790177",
    "kind": "compute#route",
    "name": "default-route-c316d6acc7332b4b",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-c316d6acc7332b4b"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:03.115-08:00",
    "description": "Default local route to the subnetwork 10.166.0.0/20.",
    "destRange": "10.166.0.0/20",
    "id": "6010199786325507360",
    "kind": "compute#route",
    "name": "default-route-d431f58d6523f27a",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-d431f58d6523f27a"
  },
  {
    "creationTimestamp": "2022-12-21T00:28:59.633-08:00",
    "description": "Default local route to the subnetwork 10.206.0.0/20.",
    "destRange": "10.206.0.0/20",
    "id": "1998574167197187364",
    "kind": "compute#route",
    "name": "default-route-d62ba1b5651c11e7",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-d62ba1b5651c11e7"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:03.257-08:00",
    "description": "Default local route to the subnetwork 10.208.0.0/20.",
    "destRange": "10.208.0.0/20",
    "id": "7333997350782729504",
    "kind": "compute#route",
    "name": "default-route-d66d5f3c08efee80",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-d66d5f3c08efee80"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:01.268-08:00",
    "description": "Default local route to the subnetwork 10.168.0.0/20.",
    "destRange": "10.168.0.0/20",
    "id": "8837384729294503202",
    "kind": "compute#route",
    "name": "default-route-e7174b8619696a58",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-e7174b8619696a58"
  },
  {
    "creationTimestamp": "2022-12-21T00:29:01.819-08:00",
    "description": "Default local route to the subnetwork 10.156.0.0/20.",
    "destRange": "10.156.0.0/20",
    "id": "7382880362148363554",
    "kind": "compute#route",
    "name": "default-route-eccb105ce62524b8",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-eccb105ce62524b8"
  },
  {
    "creationTimestamp": "2022-12-21T10:53:20.107-08:00",
    "description": "Default local route to the subnetwork 10.196.0.0/20.",
    "destRange": "10.196.0.0/20",
    "id": "3736548321499474127",
    "kind": "compute#route",
    "name": "default-route-eebfbfdb149fa172",
    "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/networks/default",
    "priority": 0,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-8f96e32795ef/global/routes/default-route-eebfbfdb149fa172"
  }
]
